--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url("./city.jpg");
-  background-size: 100%;
+  background-size: 120%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    background-size: 300%;
+    background-color: black;
+  }
 }
